2004-10-27  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_config.c (config_manage): Null values should be
	OK.

2004-10-25  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_string.c (bk_string_tokenize_split): Return an empty array
	instead of an array with one empty element when input string is
	empty. 

2004-10-22  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_string.c (bk_string_tokenize_split): If we're going to
	substitute a default value for a variable, recursively expand
	that. 

2004-10-21  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_string.c (bk_string_tokenize_split): Support
	${VAR:=default} construction when doing expansion.

2004-08-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_read, bk_polling_io_write): don't
	deadlock waiting for the i/o thread to do the work when running on
	the i/o thread

	* lib/b_run.c (struct bk_run): track thread executing bk_run_run
	(bk_run_run): set br_iothread
	(bk_run_on_iothread): new function to report if on i/o thread

2004-08-21  Seth Robertson  <seth@sampson.sysdetect.com>

	* lib/b_vptr.c (bk_vptr_cmp): When comparing keys of unequal length,
	we lost track of what pos/neg value to return when the keys were
	unequal in the raw data.

2004-08-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_internal.h (struct bk_ioh): track max iov len here

	* lib/b_ioh.c (bk_ioh_init): compute max iov len
	(bk_ioh_stdwrfun): don't try to exceed max iov len for writev

	* lib/b_netinfo.c (bni2sin, bni2sin6, bni2un): inet4 sockaddr len is
	16, not just the 4 bytes of IP address [similarly for IPv6/unix]

2004-08-12  James Tanis  <jtt@outpost.tanis.org>

	* src/bttcp.c (connect_complete): Close out correct server handle.
	(do_cancel): Also shut down server if set.

	* lib/b_addrgroup.c (listen_activity): For DGRAM servers: remove
	serving socket from serving after connecting it to client. Add new
	socket to service.

2004-08-10  James Tanis  <jtt@outpost.tanis.org>
